--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: crimson;
+    color: rgb(3, 161, 252);
     padding: 0 5px;
     background: #fff;
     transform: translateX(-50%);
@@ -89,7 +89,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: crimson;
+    background: rgb(3, 161, 252);
 }
 .navbar .max-width{
     display: flex;
@@ -102,7 +102,7 @@ section .title::after{
     font-weight: 600;
 }
 .navbar .logo a span{
-    color: crimson;
+    color: rgb(3, 161, 252);
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -121,7 +121,7 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: crimson;
+    color: rgb(3, 161, 252);
 }
 .navbar.sticky .menu li a:hover{
     color: #fff;
@@ -138,7 +138,7 @@ section .title::after{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: crimson;
+    background: rgb(3, 161, 252);
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -194,30 +194,30 @@ section .title::after{
     margin: 5px 0;
 }
 .home .home-content .text-3 span{
-    color: crimson;
+    color: rgb(3, 161, 252);
     font-weight: 500;
 }
 .home .home-content a{
     display: inline-block;
-    background: crimson;
+    background: rgb(3, 161, 252);
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid rgb(3, 161, 252);
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: crimson;
+    color: rgb(3, 161, 252);
     background: none;
 }
 
 
 /* about section styling */
 .about .title::after{
-    content: "who i am";
+    content: "passions, interests";
 }
 
 .about .about-content .right{
@@ -229,25 +229,25 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: crimson;
+    color: rgb(3, 161, 252);
 }
 .about .about-content .right p{
     text-align: justify;
 }
 .about .about-content .right a{
     display: inline-block;
-    background: crimson;
+    background: rgb(3, 161, 252);
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid rgb(3, 161, 252);
     transition: all 0.3s ease;
 }
 .about .about-content .right a:hover{
-    color: crimson;
+    color: rgb(3, 161, 252);
     background: none;
 }
 
@@ -260,25 +260,25 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .left .text span{
-    color: crimson;
+    color: rgb(3, 161, 252);
 }
 .about .about-content .left p{
     text-align: justify;
 }
 .about .about-content .left a{
     display: inline-block;
-    background: crimson;
+    background: rgb(3, 161, 252);
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid crimson;
+    border: 2px solid rgb(3, 161, 252);
     transition: all 0.3s ease;
 }
 .about .about-content .left a:hover{
-    color: crimson;
+    color: rgb(3, 161, 252);
     background: none;
 }
 
@@ -295,7 +295,7 @@ section .title::after{
 .mprojects .title::after,
 .teams .title::after{
     background: #111;
-    content: "what i provide";
+    content: "";            /* can type something here */
 }
 .mprojects .mproj-content .card{
     width: calc(33% - 20px);
@@ -307,7 +307,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .mprojects .mproj-content .card:hover{
-    background: crimson;
+    background: rgb(3, 161, 252);
 }
 .mprojects .mproj-content .card .box{
     transition: all 0.3s ease;
@@ -317,7 +317,7 @@ section .title::after{
 }
 .mprojects .mproj-content .card i{
     font-size: 50px;
-    color: crimson;
+    color: rgb(3, 161, 252);
     transition: color 0.3s ease;
 }
 .mprojects .mproj-content .card:hover i{
@@ -342,7 +342,7 @@ section .title::after{
 .sprojects .title::after,
 .teams .title::after{
     background: #111;
-    content: "what i provide";
+    content: "";
 }
 .sprojects .sproj-content .card{
     width: calc(33% - 20px);
@@ -354,7 +354,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .sprojects .sproj-content .card:hover{
-    background: crimson;
+    background: rgb(3, 161, 252);
 }
 .sprojects .sproj-content .card .box{
     transition: all 0.3s ease;
@@ -364,7 +364,7 @@ section .title::after{
 }
 .sprojects .sproj-content .card i{
     font-size: 50px;
-    color: crimson;
+    color: rgb(3, 161, 252);
     transition: color 0.3s ease;
 }
 .sprojects .sproj-content .card:hover i{
@@ -385,7 +385,7 @@ footer{
     text-align: center;
 }
 footer span a{
-    color: crimson;
+    color: rgb(3, 161, 252);
     text-decoration: none;
 }
 footer span a:hover{
