--- a/style.css
+++ b/style.css
@@ -491,6 +491,7 @@ footer span a:hover{
         display: flex;
         justify-content: center;
         margin: 0 auto 60px;
+        flex: 100%;
     }
     .about .about-content .right{
         flex: 100%;
