--- a/pages/style.css
+++ b/pages/style.css
@@ -35,6 +35,11 @@ section{
     padding: 0 80px;
     margin: auto;
 }
+
+h3{
+    margin-bottom: 15px;
+}
+
 .about, .mprojects, .sprojects, footer{
     font-family: 'Poppins', sans-serif;
 }
@@ -234,6 +239,11 @@ section .title::after{
 .about .about-content .right p{
     text-align: justify;
 }
+.contrib{
+    padding-bottom: 0px;
+}
+
+
 
 
 
