--- a/pages/rccar/style.css
+++ b/pages/rccar/style.css
@@ -167,11 +167,22 @@ section .title::after{
     filter: brightness(90%);
 }
 
+i{
+    color: rgb(3, 161, 252);
+    padding-right: 10px;
+    font-size: 50px;    
+    transition: all 0.3s ease;
+}
+
+i:hover{
+    color: rgb(7, 114, 175);
+}
+
 
 /* home section styling */
 .home{
     display: flex;
-    background: url("images/robot.jpg") no-repeat center;
+    /* background: url("images/robot.jpg") no-repeat center; */
     height: 100vh;
     color: #fff;
     min-height: 500px;
@@ -182,9 +193,6 @@ section .title::after{
 .home .max-width{
   width: 100%;
   display: flex;
-}
-.home .max-width .row{
-  margin-right: 0;
 }
 .home .home-content .text-1{
     font-size: 27px;
@@ -225,9 +233,7 @@ section .title::after{
     content: "";
 }
 
-.about .about-content .right{
-    width: 45%;
-}
+
 .about .about-content .right .text{
     font-size: 25px;
     font-weight: 600;
@@ -239,17 +245,17 @@ section .title::after{
 .about .about-content .right p{
     text-align: justify;
 }
-.contrib{
-    padding-bottom: 0px;
-}
-
-
-
+ 
 
 
 .about .about-content .left{
     width: 45%;
 }
+.about .about-content .second-row .left{
+    width: 45%;
+    float: left;
+}
+
 .about .about-content .left .text{
     font-size: 25px;
     font-weight: 600;
@@ -279,14 +285,6 @@ section .title::after{
 }
 
 
-/* .hockey-poster img{
-    max-width: 100%;
-    padding-top: 40px;
-    padding-bottom: 40px;
-} */
-
-
-
 /* footer section styling */
 footer{
     background: #111;
@@ -301,6 +299,18 @@ footer span a{
 footer span a:hover{
     text-decoration: underline;
 }
+
+
+.second-row{
+    padding-top: 50px;
+}
+
+
+.right{
+    width: 45%;
+    margin-left: 55%;
+}
+
 
 
 /* responsive media query start */
