--- a/pages/hockey/style.css
+++ b/pages/hockey/style.css
@@ -242,14 +242,14 @@ section .title::after{
 
 
 
-i{
+.fa-github-square{
     color: rgb(3, 161, 252);
     padding-right: 10px;
     font-size: 50px;    
     transition: all 0.3s ease;
 }
 
-i:hover{
+.fa-github-square:hover{
     color: rgb(7, 114, 175);
 }
 
