--- a/style.css
+++ b/style.css
@@ -501,6 +501,9 @@ footer span a:hover{
     }
 }
 @media (max-width: 947px){
+    .about .title::after {
+        content: "";
+    }
     .menu-btn{
         display: block;
         z-index: 999;
@@ -546,12 +549,22 @@ footer span a:hover{
     .about .about-content .column{
         width: 100%;
     }
-    .about .about-content .left{
+    /* .about .about-content .left{
         display: flex;
         justify-content: center;
         margin: 0 auto 60px;
         flex: 100%;
+    } */
+    .about .about-content .right .downloadcv-btn{
+        max-width: 100%;
+        text-align: center;
+        padding: 5% 10%;
     }
+
+    .about .about-content .right{
+        text-align: center;
+    }
+
     .about .about-content .right{
         flex: 100%;
     }
@@ -591,6 +604,30 @@ footer span a:hover{
     }
 }
 
+
+
+/* 
+@media (max-width: 667px) {
+    .max-width{
+        padding: 0 23px;
+    }
+    .home .home-content .text-2{
+        font-size: 60px;
+    }
+    .home .home-content .text-3{
+        font-size: 32px;
+    }
+    .home .home-content a{
+        font-size: 20px;
+    }
+    .mprojects .mproj-content .card{
+        width: 100%;
+    }
+    .sprojects .sproj-content .card{
+        width: 100%;
+    }
+} */
+
 @media (max-width: 500px) {
     .home .home-content .text-2{
         font-size: 50px;
@@ -621,3 +658,10 @@ footer span a:hover{
         line-height: 38px;
     }
 }
+
+    
+
+
+
+
+
