--- a/pages/qcrig/style.css
+++ b/pages/qcrig/style.css
@@ -382,7 +382,6 @@ img{
         width: 100%;
     }
 
- 
 
     .about .about-content .right{
         text-align: center;
@@ -390,6 +389,48 @@ img{
 
     .about .about-content .right{
         flex: 100%;
+    }
+
+
+    .about .about-content .left{
+        width: 100%;
+    }
+
+    .about .about-content .left .text{
+        text-align: center;
+    }
+
+    iframe{
+        width: 100%;
+        padding: 20px 10px;
+        border: none;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    img{
+        /* width: 90%;
+        height: auto;
+        border: none; */
+        padding: 20px 10px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .about .about-content .second-row .left{
+        width: 95%; 
+        text-align: justify;
+    }
+
+    .about .about-content .second-row .right{
+        width: 95%;
+        margin-left: 0px;
+    }
+
+    h3{
+        text-align: center;
     }
 
 }
