--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ section .title::before{
     left: 50%;
     width: 180px;
     height: 3px;
-    background: white;
+    background: rgb(193, 193, 193);
     transform: translateX(-50%);
 }
 section .title::after{
@@ -74,7 +74,7 @@ section .title::after{
     font-size: 20px;
     color: #405f9e;
     padding: 0 5px;
-    background: #fff;
+    background: rgb(193, 193, 193);
     transform: translateX(-50%);
 }
 
@@ -97,16 +97,24 @@ section .title::after{
     justify-content: space-between;
 }
 .navbar .logo a{
-    color: #fff;
-    font-size: 35px;
+    color: rgb(193, 193, 193);
     font-weight: 600;
+    font-size: 35px;
+    background-image: -webkit-linear-gradient(left, #E0F8F7, #585858, #fff); /* For Chrome and Safari */
+    background-image:    -moz-linear-gradient(left, #E0F8F7, #585858, #fff); /* For old Fx (3.6 to 15) */
+    background-image:     -ms-linear-gradient(left, #E0F8F7, #585858, #fff); /* For pre-releases of IE 10*/
+    background-image:      -o-linear-gradient(left, #E0F8F7, #585858, #fff); /* For old Opera (11.1 to 12.0) */
+    background-image:         linear-gradient(to right, #E0F8F7, #585858, #fff); /* Standard syntax; must be last */
+    color:transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
 }
 .navbar .logo a span{
-    color: #405f9e;
+    /* color: #405f9e; */
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
-    color: #fff;
+    color: rgb(202, 202, 202);
 }
 .navbar .menu li{
     list-style: none;
@@ -114,7 +122,7 @@ section .title::after{
 }
 .navbar .menu li a{
     display: block;
-    color: #fff;
+    color: rgb(193, 193, 193);
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
@@ -124,12 +132,12 @@ section .title::after{
     color: #405f9e;
 }
 .navbar.sticky .menu li a:hover{
-    color: #fff;
+    color: rgb(193, 193, 193);
 }
 
 /* menu btn styling */
 .menu-btn{
-    color: #fff;
+    color: rgb(193, 193, 193);
     font-size: 23px;
     cursor: pointer;
     display: none;
@@ -143,7 +151,7 @@ section .title::after{
     bottom: 10px;
     text-align: center;
     line-height: 45px;
-    color: #fff;
+    color: rgb(193, 193, 193);
     z-index: 9999;
     font-size: 30px;
     border-radius: 6px;
@@ -168,7 +176,7 @@ section .title::after{
     display: flex;
     background: url("images/space2.jpg") no-repeat center;
     height: 100vh;
-    color: #fff;
+    color: rgb(193, 193, 193);
     min-height: 500px;
     background-size: cover;
     /* background-attachment: fixed; */
@@ -200,7 +208,7 @@ section .title::after{
 .home .home-content a{
     display: inline-block;
     background: #405f9e;
-    color: #fff;
+    color: rgb(193, 193, 193);
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
@@ -221,7 +229,7 @@ section .title::after{
     /* background-color: #111; */
     background: url("images/space2.jpg") no-repeat center;
     /* height: 100vh; */
-    color: #fff;
+    color: rgb(193, 193, 193);
     /* min-height: 500px; */
     background-size: cover;
 }
@@ -276,7 +284,7 @@ section .title::after{
 .tooltip .tooltiptext {
 visibility: hidden;
 font-size: 25px;
-color: white;
+color: rgb(193, 193, 193);
 background-color: #111;
 text-align: left;
 border-radius: 6px;
@@ -298,12 +306,12 @@ visibility: visible;
 
 .about .about-content .right a:hover .box,
     .email-btn:hover .box{
-    color: white;
+    color: rgb(193, 193, 193);
     transform: scale(1.05);
 }
 
 .about .about-content .right .downloadcv-btn:hover .box{
-    color: white;
+    color: rgb(193, 193, 193);
     transform: scale(1.05);
 }
 
@@ -342,7 +350,7 @@ visibility: visible;
 .about .about-content .left a{
     display: inline-block;
     background: #405f9e;
-    color: #fff;
+    color: rgb(193, 193, 193);
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
@@ -361,12 +369,12 @@ visibility: visible;
 
 
 .mprojects, .teams{
-    color:#fff;
+    color:rgb(193, 193, 193);
     background: #111;
 }
 .mprojects .title::before,
 .teams .title::before{
-    background: #fff;
+    background: rgb(193, 193, 193);
 }
 .mprojects .title::after,
 .teams .title::after{
@@ -397,7 +405,7 @@ visibility: visible;
     transition: color 0.3s ease;
 }
 .mprojects .mproj-content .card:hover i{
-    color: #fff;
+    color: rgb(193, 193, 193);
 }
 .mprojects .mproj-content .card .text{
     font-size: 25px;
@@ -406,7 +414,7 @@ visibility: visible;
 }
 
 .mprojects .mproj-content .card{
-    color: white;
+    color: rgb(193, 193, 193);
 }
 
 .mprojects{
@@ -419,12 +427,12 @@ visibility: visible;
 
 /* sprojects section styling */
 .sprojects, .teams{
-    color:#fff;
+    color:rgb(193, 193, 193);
     background: #111;
 }
 .sprojects .title::before,
 .teams .title::before{
-    background: #fff;
+    background: rgb(193, 193, 193);
 }
 .sprojects .title::after,
 .teams .title::after{
@@ -455,7 +463,7 @@ visibility: visible;
     transition: color 0.3s ease;
 }
 /* .sprojects .sproj-content .card:hover i{
-    color: #fff;
+    color: rgb(193, 193, 193);
 } */
 
 
@@ -469,7 +477,7 @@ visibility: visible;
     border-radius: 10px;
 }
 /* ..skills-list a:hover{
-    color: #fff;
+    color: rgb(193, 193, 193);
 } */
 
 
@@ -520,7 +528,7 @@ visibility: visible;
 footer{
     background: #111;
     padding: 15px 23px;
-    color: #fff;
+    color: rgb(193, 193, 193);
     text-align: center;
 }
 footer span a{
