--- a/pages/qcrig/style.css
+++ b/pages/qcrig/style.css
@@ -30,7 +30,7 @@ html{
 section{
     padding: 100px 0;
     color: rgb(193, 193, 193);
-    background: url("../../images/space.jpg") no-repeat center;
+    background: url("../../images/space5.jpg") no-repeat center;
     background-size: cover;
 }
 
