--- a/style.css
+++ b/style.css
@@ -174,14 +174,14 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url("images/space2.jpg") no-repeat center;
+    /* background: url("images/space_part11.jpg") no-repeat center; */
     height: 100vh;
     color: rgb(193, 193, 193);
-    min-height: 500px;
-    background-size: cover;
-    /* background-attachment: fixed; */
+    /* min-height: 500px;
+    background-size: cover; */
     font-family: 'Ubuntu', sans-serif;
 }
+
 .home .max-width{
   width: 100%;
   display: flex;
@@ -225,14 +225,11 @@ section .title::after{
 
 /* about section styling */
 
-.about{
-    /* background-color: #111; */
-    background: url("images/space2.jpg") no-repeat center;
-    /* height: 100vh; */
+/* .about{
+    background: url("images/space_part2.jpg") no-repeat center;
     color: rgb(193, 193, 193);
-    /* min-height: 500px; */
     background-size: cover;
-}
+} */
 
 .about .title::after{
     content: "";
@@ -364,6 +361,16 @@ visibility: visible;
     background: none;
 }
 
+
+.home_about{
+    /* background-color: #111; */
+    background: url("images/space_full.jpg") no-repeat center;
+    /* height: 100vh; */
+    color: rgb(193, 193, 193);
+    /* min-height: 500px; */
+    background-size: cover;
+}
+
 /* mprojects section styling */
 
 
@@ -419,7 +426,7 @@ visibility: visible;
 
 .mprojects{
     /* background-color: #111; */
-    background: url("images/space2.jpg") no-repeat center;
+    background: url("images/space5.jpg") no-repeat center;
     /* height: 100vh;
     min-height: 500px; */
     background-size: cover;
@@ -518,7 +525,7 @@ visibility: visible;
 
 .sprojects{
     /* background-color: #111; */
-    background: url("images/space2.jpg") no-repeat center;
+    background: url("images/space5.jpg") no-repeat center;
     /* height: 100vh;
     min-height: 500px; */
     background-size: cover;
