--- a/style.css
+++ b/style.css
@@ -396,6 +396,7 @@ visibility: visible;
     padding: 50px 25px;
     cursor: pointer;
     transition: all 0.3s ease;
+    margin-bottom: 20px;
 }
 .mprojects .mproj-content .card:hover{
     background: #405f9e;
